// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ScrollActor Snapshots > injected styles > injects styles into document head 1`] = `
"
/* Scroll to bottom button */
.scroll-to-bottom {
  position: absolute;
  bottom: 80px;
  right: 20px;
  width: 36px;
  height: 36px;
  border-radius: 50%;
  background: var(--vscode-button-background);
  color: var(--vscode-button-foreground);
  border: none;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 16px;
  opacity: 0;
  transform: translateY(10px);
  transition: opacity 0.2s ease, transform 0.2s ease;
  pointer-events: none;
  z-index: 100;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
}

.scroll-to-bottom.visible {
  opacity: 1;
  transform: translateY(0);
  pointer-events: auto;
}

.scroll-to-bottom:hover {
  background: var(--vscode-button-hoverBackground);
}

.scroll-to-bottom::after {
  content: '↓';
}
"
`;

exports[`ScrollActor State Snapshots > captures initial state 1`] = `
{
  "autoScroll": true,
  "nearBottom": true,
  "userScrolled": false,
}
`;

exports[`ScrollActor State Snapshots > captures state during streaming with user scroll 1`] = `
{
  "autoScroll": true,
  "nearBottom": true,
  "userScrolled": false,
}
`;

exports[`ScrollActor State Snapshots > captures state with auto-scroll disabled 1`] = `
{
  "autoScroll": false,
  "nearBottom": true,
  "userScrolled": false,
}
`;
